samples/_failures_safe/1761720253_95f7f0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a9ae5694.c: In function ‘main’:
./samples/SAFE/__tmp_a9ae5694.c:165:5: error: ‘sort_words_by’ undeclared (first use in this function)
  165 |     sort_words_by
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_a9ae5694.c:165:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_a9ae5694.c:165:18: error: expected ‘;’ at end of input
  165 |     sort_words_by
      |                  ^
      |                  ;
./samples/SAFE/__tmp_a9ae5694.c:165:5: error: expected declaration or statement at end of input
  165 |     sort_words_by
      |     ^~~~~~~~~~~~~
